------------------------------------------------------------------------
r1287 | gaser | 2018-03-05 16:17:18

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
M       cat_batch_cat.sh
M       cat_conf_extopts.m
MM      cat_spm_preproc_write8.m
MM      cat_stat_histth.m
 M      cat_vol_pbtv.cpp
 M      cat_vol_pbtv.mexmaci64
M       html/cat.html
M       html/cat_versions.html

(1) Fixed: Option "-nojvm" in cat_batch_cat.sh was not correctly working.
(2) Fixed: Corrected typos in help text.
------------------------------------------------------------------------
r1286 | gaser | 2018-03-05 12:44:37 +0100 (Mo, 05 Mär 2018) | 47 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat12.m
M       cat_conf_tools.m
M       cat_defaults.m
M       cat_io_3Dto4D.m
M       cat_io_FreeSurfer.m
M       cat_io_writenii.m
M       cat_io_xml2csv.m
M       cat_main.m
M       cat_main_cleanup.m
M       cat_main_gcut.m
M       cat_run_job.m
M       cat_run_job1070.m
M       cat_spm_preproc_run.m
M       cat_spm_preproc_write8.m
M       cat_stat_analyze_ROIs.m
M       cat_stat_check_cov.m
M       cat_surf_avg.m
M       cat_surf_createCS.m
M       cat_surf_resamp.m
M       cat_vol_approx.m
M       cat_vol_average.m
M       cat_vol_defs.m
M       cat_vol_pbt.m
M       cat_vol_pbtp.cpp
M       cat_vol_pbtp.mexmaci64
M       html/cat.html
M       slice_overlay.m
M       tbx_cfg_cat.m

(1) Changed: Moved options for cerebellar surface extraction to developer
    mode.
(2) Fixed: Disabled use of mask for resampling cerebellar surfaces in 
    cat_surf_resample.m.
(3) Changed: Canceled Roberts changes from r1285 in cat_vol_pbt* because these
    functions have to be tested more carefully and are not yet working.
(4) Fixed: Ygm and Ywm were not defined in cat_main_gcut.m.
(5) Changed: Decreased weighting of final cleanup because it sometimes removed
    parts of the brain.