@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r1287 | gaser | 2018-03-05 16:17:18
+r1288 | gaser | 2018-03-06 16:28:12
+
+Changed paths:
+M       CHANGES.txt
+M       Contents.m
+M       cat_main.m
+M       html/cat.html
+
+Changed: Modified skull-stripping for inverted data (i.e. T2/PD).
+------------------------------------------------------------------------
+r1287 | gaser | 2018-03-05 16:17:42 +0100 (Mo, 05 Mär 2018) | 17 lines
 
 Changed paths:
 M       CAT12-Manual.docx
@@ -17,6 +27,7 @@ M       html/cat_versions.html
 
 (1) Fixed: Option "-nojvm" in cat_batch_cat.sh was not correctly working.
 (2) Fixed: Corrected typos in help text.
+
 ------------------------------------------------------------------------
 r1286 | gaser | 2018-03-05 12:44:37 +0100 (Mo, 05 Mär 2018) | 47 lines
 
